--- a/content/blogs/blog6.Rmd
+++ b/content/blogs/blog6.Rmd
@@ -15,9 +15,9 @@ title: Biography
 Born and raised in *Dakar*, the capital of *Senegal*,the most western country in *Africa* and home of the pink lake (pictured above from Dakarlives' Instagram page).
 I moved to *Montreal, Canada* in 2015 to pursue my undergrad in **Business Administration** with a focus in **Finance** at **HEC Montreal**. 
 
-While at HEC, I had the opportunity to live for sixth months I had the opportunity to spend six months in *Glasgow* as part of an **International Exchange Program**. I loved the experience as it enabled me to discover new cultures, travel and more importantly visit *London*, the city of my heart. 
+While at HEC, I had the opportunity to live for sixth months in *Glasgow* as part of an **International Exchange Program**. I loved the experience as it enabled me to discover new cultures, travel and more importantly visit *London*, the city of my heart. 
 
-I’ve long been interested in working in the financial industry therefore, in summer 2017, I interned at Diamond Bank, a commercial bank in Senegal. However, being always open to new experiences, I decided to intern in a Canadian Management Consulting firm CowaterSogema,during summer 2018. The latter works on development projects in emerging countries and supports governments with their finances.After graduating in 2019, I worked at **BNP Paribas** as a **Due Diligence Analyst** but decided to join **LBS** in order to strengthen my candidature for **Investment Banking Analyst positions.**
+I’ve long been interested in working in the financial industry therefore, in summer 2017, I interned at **Diamond Bank**, a commercial bank in Senegal. However, being always open to new experiences, I decided to intern in a Canadian Management Consulting firm **CowaterSogema**,during summer 2018. The latter works on development projects in emerging countries and supports governments with their finances.After graduating in 2019, I worked at **BNP Paribas** as a **Due Diligence Analyst** but decided to join **LBS** in order to strengthen my candidature for **Investment Banking Analyst positions.**
 
 At LBS, besides achieving my professional goals, I am very keen on making a long-term impact by contributing to the student community through my ExCo position in the **Black in Business Club** and working to increase diversity. Outside of university, I enjoy art (music, photography, visual art), traveling, coding (even if it is one of the most challenging experience I've had to go through).
 
