--- a/public/blogs/blog9.Rmd
+++ b/public/blogs/blog9.Rmd
@@ -5,10 +5,10 @@ categories:
 date: "2017-10-31T21:28:43-05:00"
 #description: ""
 draft: false
-image: A connected world.jpg
+image: A connected world.png 
 keywords: ""
 slug: blog9
-#title: Ipsum
+title: US adults and Social media
 ---
 
 
